--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Vendor/Stanley"]
 	path = Vendor/Stanley
 	url = https://github.com/Kosoku/Stanley.git
+[submodule "Vendor/file"]
+	path = Vendor/file
+	url = https://github.com/file/file.git
